Adiciona imagens e css corrigidos

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aurea Cakes</title>
-    <link rel="stylesheet" href="/estilos/style.css">
-    <link rel="stylesheet" href="/estilos/respossivo.css">
-    <link rel="stylesheet" href="/estilos/carrinho.css">
+    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="/CSS/respossivo.css">
+    <link rel="stylesheet" href="/CSS/carrinho.css">
 </head>
 <body>
     <div></div>
-    <img src="/img/capa.png" alt="imagen do fundo" class="bg">
+    <img src="img/capa.png" alt="imagen da capa" class="bg">
     <header>
         <div class="logo">
             <h1>Aurea Cakes</h1>
@@ -36,19 +36,19 @@
 
        <section class="cardapio-imgs">
     <div class="bolo">
-        <img src="/img/bolo-de-chocolate-tradicional.png" alt="Bolo de Chocolate">
+        <img src="img/bolochocolatetradicional.png" alt="Bolo de Chocolate">
         <h3>Bolo de Chocolate</h3>
     </div>
     <div class="bolo">
-        <img src="/img/bolo-de-cenoura-com-cobertura-de-chocolate.png"alt="Bolo de Cenoura">
+        <img src="img/bolo de cenoura .png"alt="Bolo de Cenoura">
         <h3>Bolo de Cenoura</h3>
     </div>
     <div class="bolo">
-        <img src="/img/bolo-de-morango-tradicional.png" alt="Bolo de Morango">
+        <img src="img/bolodemorangotradicional.png" alt="Bolo de Morango">
         <h3>Bolo de Morango</h3>
     </div>
     <div class="bolo">
-        <img src="/img/bolo formigueiro.png" alt="Bolo Formigueiro">
+        <img src="img/bolo formigueiro.png" alt="Bolo Formigueiro">
         <h3>Bolo Formigueiro</h3>
     </div>
 </section>
