--- a/cardapio.html
+++ b/cardapio.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cardapio Digital - SABOR DE OURO</title>
-    <link rel="stylesheet" href="/estilos/cardapio.css">
-    <link rel="stylesheet" href="/estilos/carrinho.css">
+    <link rel="stylesheet" href="CSS/cardapio.css">
+    <link rel="stylesheet" href="CSS/carrinho.css">
 </head>
 <body>
     <header>
@@ -25,7 +25,7 @@
         <section class="cardapio">
             <!--Produtos 1-->
             <div class="item">
-                <img src="/img/bolo-de-chocolate-tradicional.png"  alt="Bolo de Chocolate">
+                <img src="img/bolochocolatetradicional.png"  alt="Bolo de Chocolate">
                 <h3>Bolo de Chocolate</h3>
                 <p>Tradicional com calda de chocolate.</p>
                 <span>R$ 22,00</span>
@@ -34,16 +34,16 @@
             </div>
             <!--Produto 2-->
              <div class="item">
-                <img src="/img/bolo-de-cenoura-com-cobertura-de-chocolate.png" alt="Bolo de cha Cha-tailandes">
-                <h3>Bolo de Cha-tailandes em Chapa Branca</h3>
-                <p>Bolo de Cha-tailandes com copbertura de doce de leite.</p>
+                <img src="img/bolo de cenoura .png" alt="Bolo de cha Cha-tailandes">
+                <h3>Bolo de cenoura com cobertura de Chocolate</h3>
+                <p>um sonho de degustação.</p>
                 <span>R$ 25,00</span>
                 <button onclick="adicionarAoCarrinho('Bolo de Chocolate', 25.00)">Adicionar</button>
 
             </div>
             <!--Pedido 3-->
              <div class="item">
-                <img src="/img/bolo-de-morango-tradicional.png"alt="Bolo de morango">
+                <img src="img/bolodemorangotradicional.png"alt="Bolo de morango">
                 <h3>Bolo de Morango</h3>
                 <p>Recheado com chantilly e morangos frescos.</p>
                 <span>R$ 30,00</span>
