Atualiza caminhos de arquivos e imagens

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aurea Cakes</title>
-    <link rel="stylesheet" href="/CSS/style.css">
-    <link rel="stylesheet" href="/CSS/respossivo.css">
-    <link rel="stylesheet" href="/CSS/carrinho.css">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/respossivo.css">
+    <link rel="stylesheet" href="CSS/carrinho.css">
 </head>
 <body>
     <div></div>
@@ -17,8 +17,8 @@
         </div>
         <nav>
             <button id="btn-home">Home</button>
-            <a href="/cardapio.html"><button id="btn-cardapio">CARDAPIO - BOLOS</button></a>
-            <a href="/minicaseirinho.html"><button id="btn-contato">CASEIRINHOS</button></a>
+            <a href="cardapio.html"><button id="btn-cardapio">CARDAPIO - BOLOS</button></a>
+            <a href="minicaseirinho.html"><button id="btn-contato">CASEIRINHOS</button></a>
         </nav>
             <!-- Ícone do carrinho -->
    <button id="carrinho-botao" class="carrinho-btn">
