--- a/minicaseirinho.html
+++ b/minicaseirinho.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caseirinho</title>
-    <link rel="stylesheet" href="/estilos/caseirinho.css">
-    <link rel="stylesheet" href="/estilos/carrinho.css">
+    <link rel="stylesheet" href="CSS/caseirinho.css">
+    <link rel="stylesheet" href="CSS/carrinho.css">
 
 </head>
 <body>
