Atualizzando caminhos, js e imagens

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aurea Cakes</title>
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="CSS/respossivo.css">
-    <link rel="stylesheet" href="CSS/carrinho.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/respossivo.css">
+    <link rel="stylesheet" href="css/carrinho.css">
 </head>
 <body>
     <div></div>
@@ -48,7 +48,7 @@
         <h3>Bolo de Morango</h3>
     </div>
     <div class="bolo">
-        <img src="img/bolo formigueiro.png" alt="Bolo Formigueiro">
+        <img src="img/boloformigueiro.png" alt="Bolo Formigueiro">
         <h3>Bolo Formigueiro</h3>
     </div>
 </section>
@@ -59,6 +59,6 @@
         <p>© 2025 Aurea Cakes - Todos os direitos reservados.</p>
     </footer>
 
-    <script src="/js/carrinho.js"></script>
+    <script src="js/carrinho.js"></script>
 </body>
 </html>
