--- a/cardapio.html
+++ b/cardapio.html
@@ -52,7 +52,7 @@
             </div>
 
              <div class="item">
-                <img src="/img/bolo formigueiro.png" alt="bolo formigueiro">
+                <img src="img/boloformigueiro.png" alt="bolo formigueiro">
                 <h3>Bolo formigueiro</h3>
                 <p>Sinta a fofura a cada mordida! Nosso Bolo Formigueiro derrete na boca e adoça seu dia.</p>
                 <span>R$ 30</span>
@@ -62,6 +62,6 @@
             
         </section>
     </main>
-    <script src="/js/carrinho.js"></script>
+    <script src="js/carrinho.js"></script>
 </body>
 </html>
