--- a/minicaseirinho.html
+++ b/minicaseirinho.html
@@ -129,6 +129,6 @@
      </section>
    </main>
    
-   <script src="/js/carrinho.js"></script>
+   <script src="js/carrinho.js"></script>
 </body>
 </html>
