--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aurea Cakes</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/respossivo.css">
-    <link rel="stylesheet" href="css/carrinho.css">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/respossivo.css">
+    <link rel="stylesheet" href="CSS/carrinho.cssgit">
 </head>
 <body>
     <div></div>
