--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Aurea Cakes</title>
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/respossivo.css">
-    <link rel="stylesheet" href="CSS/carrinho.cssgit">
+    <link rel="stylesheet" href="CSS/carrinho.css">
 </head>
 <body>
     <div></div>
